--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,3 +1,5 @@
+/* Select the image with a class of kitty-1 */
+
 .kitty-1 {
   position: absolute;
   z-index: 1;
@@ -16,7 +18,7 @@
 
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
-# basket img {
+basket img {
   position: absolute;
   z-index: 5;
   top: 291px;
